--- a/SampleEvent/SampleEvent/SampleEvent.csproj
+++ b/SampleEvent/SampleEvent/SampleEvent.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Remove="BaseEventHandleProvider.cs" />
     <Compile Remove="NewEventHandleProvider.cs" />
+    <Compile Remove="TaskExtention.cs" />
   </ItemGroup>
 
 </Project>
